apps/base/media/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
  labels:
    app: bazarr
    app.kubernetes.io/name: bazarr
spec:
  selector:
    app: bazarr
  ports:
    - name: http
      protocol: TCP
      port: 6767
      targetPort: 6767
  type: ClusterIP
